Editing of my html-file to the branch - SvystunOleksandr

--- a/SvystunOleksandr.html
+++ b/SvystunOleksandr.html
@@ -12,12 +12,12 @@
 <body>
 
 	<div class="container text-center border-bottom">
-			<h1>Your Full Name</h1>
+			<h1>MY FULL NAME</h1>
 	</div>
 
 	<div class="container-fluid text-center">
 		<div class="row">
-			<div class="just-text">QATESTSVYSTUN</div>
+			<div class="just-text">SVYSTUN OLEKSANDR</div>
 		</div>
 	</div>
 
