--- a/KhrystynaShapovalova.html
+++ b/KhrystynaShapovalova.html
@@ -12,7 +12,7 @@
 <body>
 
 	<div class="container text-center border-bottom">
-			<h1>Your Full Name</h1>
+			<h1>Khrystyna Shapovalova</h1>
 	</div>
 
 	<div class="container-fluid text-center">
